# gitlog-digest

./: .gitignore  README.md  setup.cfg
gitlog_digest/: activity_heatmap.py  author_rank.py  author_timeline.py  author_velocity.py  branch_activity.py  burst_integration.py  cadence_integration.py  changelog.py  churn_integration.py  cli.py  collab_integration.py  commit_age.py  commit_burst.py  commit_cadence.py  commit_churn.py  commit_collab.py  commit_complexity.py  commit_coupling.py  commit_depth.py  commit_domain.py  commit_flow.py  commit_focus.py  commit_frequency.py  commit_graph.py  commit_hotspot.py  commit_hour_distribution.py  commit_impact.py  commit_label.py  commit_language.py  commit_longevity.py  commit_momentum.py  commit_ownership.py  commit_pattern.py  commit_prefix_stats.py  commit_recency.py  commit_revert.py  commit_ribbon.py  commit_scope.py  commit_sentiment.py  commit_size.py  (+52 more)
tests/: test_activity_heatmap.py  test_author_rank.py  test_author_timeline.py  test_author_velocity.py  test_branch_activity.py  test_burst_integration.py  test_changelog.py  test_cli.py  test_commit_age.py  test_commit_burst.py  test_commit_burst_edge_cases.py  test_commit_cadence.py  test_commit_churn.py  test_commit_collab.py  test_commit_complexity.py  test_commit_complexity_edge_cases.py  test_commit_coupling.py  test_commit_depth.py  test_commit_domain.py  test_commit_flow.py  test_commit_focus.py  test_commit_frequency.py  test_commit_graph.py  test_commit_hotspot.py  test_commit_hour_distribution.py  test_commit_impact.py  test_commit_label.py  (+53 more)
