[metadata]
name = gitlog-digest
version = 0.1.0
description = Generates concise weekly summaries of git activity across multiple repositories
long_description = file: README.md
long_description_content_type = text/markdown
author = gitlog-digest contributors
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    gitlog-digest = gitlog_digest.cli:main

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov

[tool:pytest]
testpaths = tests
addopts = --tb=short

[flake8]
max-line-length = 100
exclude = .git,__pycache__,*.egg-info
